GTNPORTAL-3189: Added maxlength to redirect and condition name as well adding word-break: break-all style to avoid display of long names to break the layout.

--- a/portlet/admin/redirect/src/main/webapp/resources/css/admin.css
+++ b/portlet/admin/redirect/src/main/webapp/resources/css/admin.css
@@ -658,6 +658,8 @@
 	font-size: 11.5px;
 }
 
+.RedirectAdmin .rdr-cond-name, .RedirectAdmin .rdr-cond-settings {word-break: break-all;}
+
 .RedirectAdmin .table-striped tbody .table-striped tr:nth-child(2n+1) th,
 .RedirectAdmin .table-striped tbody .table-striped tr:nth-child(2n) td {background-color: #fff;}
 
